fix(issues-sales): remove issues from sonar from sales service